# myquery

./: .cursorignore  .dockerignore  .editorconfig  .gitattributes  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  FEATURES.md  FEATURES_UPDATE.md  IMPLEMENTATION_SUMMARY.md  LICENSE  Makefile  PROJECT_SUMMARY.md  QUICKSTART.md  README.md  __init__.py  pyproject.toml  requirements.txt
.cursor/rules/: analyze-data.mdc  core-agent.mdc  multi-db-query.mdc  project-init.mdc  schema-explorer.mdc  web-ui.mdc  (+1 more)
.github/: FUNDING.yml  SECURITY.md  dependabot.yml  pull_request_template.md
cli/: __init__.py  main.py  utils.py
config/: __init__.py  logging.py  settings.py
core/: __init__.py  agent.py  data_analyzer.py  multi_db_manager.py  query_generator.py  schema_analyzer.py
docs/: README.md  RELEASE_GUIDE.md  getting-started.md  troubleshooting.md
examples/: demo_sqlite.py  example_usage.py  full_features_demo.py  mcp_client_example.py  smart_visualization_demo.py
mcp/: __init__.py  client.py  protocol.py  server.py
scripts/: build-linux-deb.sh  build-macos-dmg.sh  build_binary.py  install.sh  local-build.sh  prepare-release.sh  setup.bat  setup.sh  test-installers.ps1  test-installers.sh  windows-installer.iss
tests/: __init__.py  test_agent.py  test_tools.py
tools/: __init__.py  analyze_data_tool.py  analyze_schema_tool.py  connect_db_tool.py  execute_query_tool.py  export_data_tool.py  format_table_tool.py  generate_query_tool.py  get_schema_tool.py  multi_db_query_tool.py  query_optimization_tool.py  visualize_data_tool.py
web/: __init__.py  main.py
(+31 files in other folders)
